@@ -18,6 +18,7 @@ Maintenance
 * C-GET SCP: Fix responses and handling of cancel
 * Fix decoding sequence if "BuiltinDecoderTranscoderOrder" is "Before"
 * Fix keep-alive in the embedded HTTP server by setting the "Keep-Alive" HTTP header
+* Fix access to videos as a single raw frame (feature broken since Orthanc 1.6.0)
 * REST API now returns 404 error if deleting an inexistent peer or modality
 * Upgraded dependencies for static builds (notably on Windows and LSB):
   - civetweb 1.13
